# OceanDataStore

./: .gitignore  404.html  LICENCE.md  README.md  index.html  objects.inv  pixi.toml  pyproject.toml  requirements.txt  sitemap.xml
.github/workflows/: ci_docs.yml  ci_tests.yml
OceanDataCatalog_example/: index.html
OceanDataCatalog_obs_example/: index.html
OceanDataStore/: __init__.py  data_catalog.py  object_store.py  object_store_handler.py  sanity_checks.py
OceanDataStore/catalog/: __init__.py  oceandatacatalog.py
OceanDataStore/catalog/stac/: __init__.py  create_noc_stac.py  npd_era5_collection.py  npd_jra55_collection.py  ods_obs_collection.py  rapid_evo_collection.py  template_collection.py  utils.py
OceanDataStore/cli/: __init__.py  arg_parser.py  argument_parser.py  cli.py  exceptions.py  icechunk.py  logging.py  main_cli.py  object_store.py  object_store_handler.py  utils.py  zarr.py
OceanDataStore/data/: update_icechunk_repo_attrs.py  update_noc_npd_era5v1_attrs.py  utils.py
OceanDataStore/data/ARMOR3D/: create_ARMOR3D_P1M-m_monthly_climatology.py  download_ARMOR3D_0.125def_P1M-m_1993_2024.py  run_create_ARMOR3D_P1M-m_monthly_climatology.slurm  run_send_ARMOR3D_P1M-m_climatology_to_os.slurm  run_send_ARMOR3D_P1M-m_monthly_to_os.slurm  run_update_ARMOR3D_P1m-m_monthly_to_os.slurm  send_ARMOR3D_P1m-m_monthly_climatology_to_os.py  send_ARMOR3D_P1m-m_monthly_to_os.py  update_ARMOR3D_P1m-m_monthly_to_os.py
OceanDataStore/data/EN.4.2.2/: create_EN4.2.2_analysis_g10_climatology.py  download_EN4.2.2_analysis_g10_data.sh  run_send_EN4.2.2_analysis_g10_climatology_to_os.slurm  run_send_EN4.2.2_analysis_g10_monthly_to_os.slurm  run_update_EN4.2.2_analysis_g10_monthly_to_os.slurm  send_EN4.2.2_analysis_g10_monthly_climatology_to_os.py  send_EN4.2.2_analysis_g10_monthly_to_os.py  update_EN4.2.2_analysis_g10_monthly_to_os.py
OceanDataStore/data/ERA5/: create_ERA5_daily_climatology.py  create_ERA5_daily_mean.py  create_ERA5_monthly_mean.py  run_create_ERA5_daily_climatology.slurm  run_send_ERA5_daily_climatology_to_os.slurm  run_send_ERA5_daily_to_os.slurm  run_send_ERA5_monthly_to_os.slurm  run_update_ERA5_daily_to_os.slurm  run_update_ERA5_monthly_to_os.slurm  send_ERA5_daily_climatology_to_os.py  send_ERA5_daily_to_os.py  send_ERA5_monthly_to_os.py  update_ERA5_daily_to_os.py  update_ERA5_monthly_to_os.py
OceanDataStore/data/HadISST/: download_HadISST1_data.sh  run_send_HadISST1_monthly_to_os.slurm  send_HadISST1_monthly_to_os.py
OceanDataStore/data/NSIDC/: download_NSIDC_monthly_1979_2025_data.sh  process_NSIDC_SSI_Antarctic_data.py  process_NSIDC_SSI_Arctic_data.py  run_send_NSIDC_v4.0_to_OS.slurm  send_NSIDC_SII_v4.0_to_os.py
OceanDataStore/data/OISST/: create_OISSTv2_daily_climatology.py  download_oisstv2_data.sh  run_create_OISSTv2_daily_climatology.slurm  run_send_OISSTv2_daily_climatology_to_os.slurm  run_send_OISSTv2_daily_to_os.slurm  run_send_OISSTv2_monthly_climatology_to_os.slurm  run_send_OISSTv2_monthly_to_os.slurm  run_update_OISSTv2_daily_to_os.slurm  send_OISSTv2_daily_climatology_to_os.py  send_OISSTv2_daily_to_os.py  send_OISSTv2_monthly_climatology_to_os.py  send_OISSTv2_monthly_to_os.py  update_OISSTv2_daily_to_os.py
OceanDataStore/data/OSTIA/: create_OSTIA_daily_climatology.py  download_OSTIA_NRT.py  download_OSTIA_REP_1981_2025.py  (+10 more)
OceanDataStore/tests/: test_data_catalog.py  test_object_store.py
catalog/: index.html
catalog_guide/: index.html
catalog_reference/: index.html
catalogs/: README.md  create_noc_stac.py  npd_collection.py  npd_collections.py  npd_era5_collection.py  npd_jra55_collection.py  rapid_evo_collection.py  utils.py
catalogs/noc-model-stac/: catalog.json
cli_guide/: index.html
cli_reference/: index.html
contributing/: index.html
docs/: mkdocs.yml
docs/docs/: OceanDataCatalog_example.ipynb  OceanDataCatalog_obs_example.ipynb  catalog.md  catalog_guide.md  catalog_reference.md  cli_guide.md  cli_reference.md  contributing.md  index.md
examples/: dask_config.json  example_send_script.sh  example_send_with_dask_script.sh  example_update_script.sh  example_update_with_dask_script.sh  index.html  n06_dataset_example.ipynb
examples/catalogs/: OceanDataCatalog_example.ipynb  OceanDataCatalog_example.py  OceanDataCatalog_obs_example.ipynb
examples/cli/: example_send_script.sh
ods/: object_store_handler.py
ods/cli/: argument_parser.py  main_cli.py
release_notes/: index.html
search/: search_index.json
src/msm_os/: __init__.py  exceptions.py  object_store.py  object_store_handler.py  sanity_checks.py  sanity_cheks.py
src/ods/: __init__.py
tests/: dask_config.json  icechunk_config.json  test_send_domain_to_zarr.slurm  test_send_to_icechunk.slurm  test_send_to_icechunk_vc_w_dask.slurm  test_send_to_icechunk_w_dask.slurm  test_send_to_icechunk_wo_dask.slurm  test_send_to_zarr.slurm  test_send_to_zarr_w_dask.slurm  test_send_to_zarr_wo_dask.slurm  test_update_vc_icechunk.slurm  test_update_vc_icechunk_w_dask.slurm  test_update_vs_icechunk.slurm  test_update_zarr.slurm  test_update_zarr_w_dask.slurm
tests/unit/: test_object_store.py
(+395 files in other folders)
