[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "msm_os"
description = "A Python library to write, update and download files to & from cloud object stores."
requires-python = ">=3.10"
keywords = ["data", "model", "object store", "tookit", "cloud", "zarr", "noc"]
authors = [{name = "Ollie Tooth"}, {email = "oliver.tooth@noc.ac.uk"},{name = "Joao Morado"},{email = "joao.morado@noc.ac.uk"}]
maintainers = [{name = "Ollie Tooth"}, {email = "oliver.tooth@noc.ac.uk"}]
classifiers = [
  "Programming Language :: Python :: 3",
  "Intended Audience :: Science/Research"
]
dependencies = [
  "dask[distributed]>=2025.2.0",
  "aiobotocore==2.17.0",
  "botocore==1.35.93",
  "netcdf4>=1.7.2",
  "h5netcdf>=1.6.1",
  "xarray>=2025.1.2",
  "s3fs>=2025.3.0",
  "fsspec>=2025.3.0",
  "numpy>=2.2.3",
  "scitools-iris>=3.9.0",
  "tenacity>=8.3.0",
  "zarr>2.18.2",
  ]

dynamic = ["version"]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.license]
file = "LICENSE.md"
content-type = "text/markdown"

[tool.setuptools.dynamic]
version = {attr = "msm_os.__init__.__version__"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]
exclude = ["*__pycache__*"]
namespaces = true

[project.optional-dependencies]
test = ["pytest >= 7.2.0"]

[project.urls]
repository = "https://github.com/NOC-MSM/msm_os"

[project.scripts]
msm_os = "msm_os.cli.main_cli:msm_os"
