[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=42", "setuptools-scm>=7"]

[project]
name = "OceanDataStore"
description = "A Python library to write, update & access ocean data stored in cloud object storage."
keywords = ["data", "model", "object store", "tookit", "cloud", "zarr", "noc"]
readme = "README.md"
dynamic = ["version"]
authors = [{name = "Ollie Tooth"}, {email = "oliver.tooth@noc.ac.uk"},{name = "Joao Morado"},{email = "joao.morado@noc.ac.uk"}]
maintainers = [{name = "Ollie Tooth"}, {email = "oliver.tooth@noc.ac.uk"}]
license = { text = "GPL-3.0-or-later" }
requires-python = ">=3.10"

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
  "dask[distributed]>=2025.2.0",
  "aiobotocore==2.17.0",
  "botocore==1.35.93",
  "netcdf4>=1.7.2",
  "h5netcdf>=1.6.1",
  "xarray>=2025.1.2",
  "s3fs>=2025.3.0",
  "fsspec>=2025.3.0",
  "numpy>=2.2.3",
  "scitools-iris>=3.9.0",
  "tenacity>=8.3.0",
  "zarr>2.18.2",
  ]

[project.optional-dependencies]
test = ["pytest >= 7.2.0"]

[project.urls]
Home = "https://github.com/NOC-MSM/OceanDataStore"
Documentation = "https://noc-msm.github.io/OceanDataStore/"

[tool.setuptools.dynamic]
version = {attr = "OceanDataStore.__init__.__version__"}

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
exclude = ["*__pycache__*"]
namespaces = true

[project.scripts]
ods = "OceanDataStore.cli.main_cli:ods"
