[project]
name = "OceanDataStore"
description = "A Python library to write, update & access ocean data stored in cloud object storage."
keywords = ["data", "model", "object store", "tookit", "cloud", "zarr", "noc"]
readme = "README.md"
dynamic = ["version"]
authors = [{name = "Ollie Tooth"}, {email = "oliver.tooth@noc.ac.uk"},{name = "Joao Morado"},{email = "joao.morado@noc.ac.uk"}]
maintainers = [{name = "Ollie Tooth"}, {email = "oliver.tooth@noc.ac.uk"}]
license = { text = "Apache-2.0" }
requires-python = ">=3.10"

classifiers = [
  "Operating System :: OS Independent",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering",
]

dependencies = [
  "dask[distributed]>=2025.2.0",
  "aiobotocore>=2.17.0",
  "botocore>=1.35.93",
  "h5netcdf>=1.6.1",
  "xarray>=2025.1.2",
  "icechunk>=0.2.15",
  "pystac>=1.13.0",
  "shapely>=2.1.2",
  "s3fs>=2025.3.0",
  "tqdm>=4.67.1",
  "fsspec>=2025.3.0",
  "numpy>=2.2.3",
  "zarr>=3.0.7",
  ]

[project.optional-dependencies]
test = ["pytest >=8.3.3", "pytest-mock >= 3.15.1"]

[project.urls]
Home = "https://github.com/NOC-MSM/OceanDataStore"
Documentation = "https://noc-msm.github.io/OceanDataStore/"

[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=77.0.3", "setuptools-scm>=8"]

[tool.setuptools.packages.find]
include = ["OceanDataStore*"]

[tool.setuptools_scm]
fallback_version = "0.2.0"

[project.scripts]
ods = "OceanDataStore.cli.cli:ods"
